Run r8 out of process, try generational ZGC.